Update the test.bat file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,9 @@ jobs:
         cd build
         cmake --build . --config Release --parallel
 
+    - name: Build QGC Plugins
+      run: ./build.bat
+
     - name: Run Tests   
       run: ./ci/test.bat
 
