--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,8 @@ jobs:
         cd build
         cmake --build . --config Release --parallel
 
-    # - name: Build QGC Plugins
-    #   run: |
-    #     build.bat
+    - name: Build QGC Plugins
+      run: ./build.bat
 
     - name: Run Tests   
       run: ./ci/test.bat
