--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,16 +28,16 @@ jobs:
     - name: Setup MSVC
       uses: microsoft/setup-msbuild@v1
 
-    - name: Configure CMake
-      run: |
-        mkdir build
-        cd build
-        cmake .. -G "Visual Studio 17 2022" -A x64
+    # - name: Configure CMake
+    #   run: |
+    #     mkdir build
+    #     cd build
+    #     cmake .. -G "Visual Studio 17 2022" -A x64
 
-    - name: Build
-      run: |
-        cd build
-        cmake --build . --config Release --parallel
+    # - name: Build
+    #   run: |
+    #     cd build
+    #     cmake --build . --config Release --parallel
 
     - name: Build QGC Plugins
       run: ./build.bat
