--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,22 +28,27 @@ jobs:
     - name: Setup MSVC
       uses: microsoft/setup-msbuild@v1
 
-    # - name: Configure CMake
-    #   run: |
-    #     mkdir build
-    #     cd build
-    #     cmake .. -G "Visual Studio 17 2022" -A x64
+    - name: Configure CMake
+      run: |
+        mkdir build
+        cd build
+        cmake .. -G "Visual Studio 17 2022" -A x64 -DCMAKE_BUILD_TYPE=Release
 
-    # - name: Build
-    #   run: |
-    #     cd build
-    #     cmake --build . --config Release --parallel
+    - name: Build
+      run: |
+        cd build
+        cmake --build . --config Release --parallel
 
-    - name: Build QGC Plugins
-      run: ./build.bat
+    - name: Run Tests
+      run: |
+        cd build
+        ctest -C Release --output-on-failure --verbose
 
-    - name: Run Tests   
-      run: ./ci/test.bat
+    # - name: Build QGC Plugins
+    #   run: ./build.bat
+
+    # - name: Run Tests
+    #   run: ./ci/test.bat
 
     - name: Package Artifacts
       run: |
